--- a/AndroidApp/bin/AndroidManifest.xml
+++ b/AndroidApp/bin/AndroidManifest.xml
@@ -13,6 +13,8 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.SEND_SMS"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
     
     <application
         android:allowBackup="true"
@@ -39,6 +41,7 @@
         <activity android:name=".BluetoothSetting" android:screenOrientation="portrait"/>
 		<activity android:name=".RecomendActivity" android:screenOrientation="portrait"/>
 		<activity android:name=".AboutActivity" android:screenOrientation="portrait"/>
+		<activity android:name=".SmsSetting" android:screenOrientation="portrait"/>
 		
         <!-- Early warning score activity--> 	
 		<activity
