--- a/Android_App/HealthApp2/app/src/main/AndroidManifest.xml
+++ b/Android_App/HealthApp2/app/src/main/AndroidManifest.xml
@@ -45,7 +45,8 @@
                 android:value=".MainActivity" />
         </activity>
         <activity android:name=".DisplayTemperatureActivity" />
-        <activity android:name=".DisplayBloodPressureActivity"></activity>
+        <activity android:name=".DisplayBloodPressureActivity" />
+        <activity android:name=".EWSActivity"></activity>
     </application>
 
 </manifest>
