--- a/Android_App/HealthApp2/app/src/main/AndroidManifest.xml
+++ b/Android_App/HealthApp2/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.test.healthapp2">
 
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -46,7 +49,8 @@
         </activity>
         <activity android:name=".DisplayTemperatureActivity" />
         <activity android:name=".DisplayBloodPressureActivity" />
-        <activity android:name=".EWSActivity"></activity>
+        <activity android:name=".EWSActivity" />
+        <activity android:name=".Bluetooth"></activity>
     </application>
 
 </manifest>
