--- a/Android_App/HealthApp2/app/src/main/AndroidManifest.xml
+++ b/Android_App/HealthApp2/app/src/main/AndroidManifest.xml
@@ -5,6 +5,11 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -50,7 +55,10 @@
         <activity android:name=".DisplayTemperatureActivity" />
         <activity android:name=".DisplayBloodPressureActivity" />
         <activity android:name=".EWSActivity" />
-        <activity android:name=".Bluetooth"></activity>
+        <activity android:name=".Bluetooth" />
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login"></activity>
     </application>
 
 </manifest>
