--- a/Android_App/HealthApp2/app/src/main/AndroidManifest.xml
+++ b/Android_App/HealthApp2/app/src/main/AndroidManifest.xml
@@ -52,10 +52,34 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-        <activity android:name=".DisplayTemperatureActivity" />
-        <activity android:name=".DisplayBloodPressureActivity" />
-        <activity android:name=".EWSActivity" />
-        <activity android:name=".Bluetooth" />
+        <activity
+            android:name=".DisplayTemperatureActivity"
+            android:parentActivityName=".MainActivity">
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".MainActivity" />
+        </activity>
+        <activity
+            android:name=".DisplayBloodPressureActivity"
+            android:parentActivityName=".MainActivity">
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".MainActivity" />
+        </activity>
+        <activity
+            android:name=".EWSActivity"
+            android:parentActivityName=".MainActivity">
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".MainActivity" />
+        </activity>
+        <activity
+            android:name=".Bluetooth"
+            android:parentActivityName=".MainActivity">
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".MainActivity" />
+        </activity>
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login" />
