--- a/03_Uno_Motor_Height/STM32F103C8T6_HEIGHT/STM32F103C8T6_Hello.uvprojx
+++ b/03_Uno_Motor_Height/STM32F103C8T6_HEIGHT/STM32F103C8T6_Hello.uvprojx
@@ -1924,6 +1924,16 @@
               <FileType>5</FileType>
               <FilePath>mbed_config.h</FilePath>
             </File>
+            <File>
+              <FileName>ultrasonic.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\ultrasonic\ultrasonic.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>ultrasonic.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\ultrasonic\ultrasonic.h</FilePath>
+            </File>
           </Files>
         </Group>
       </Groups>
