--- a/03_Uno_Motor_Height/STM32F103C8T6_HEIGHT/STM32F103C8T6_Hello.uvprojx
+++ b/03_Uno_Motor_Height/STM32F103C8T6_HEIGHT/STM32F103C8T6_Hello.uvprojx
@@ -1934,6 +1934,16 @@
               <FileType>5</FileType>
               <FilePath>.\ultrasonic\ultrasonic.h</FilePath>
             </File>
+            <File>
+              <FileName>hcsr04.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\ultrasonic\hcsr04.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>hcsr04.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\ultrasonic\hcsr04.h</FilePath>
+            </File>
           </Files>
         </Group>
       </Groups>
